# GoogleCloudPlatform-_-nexus-sdv

./: .gitignore  README.md
.github/: CODEOWNERS
.github/workflows/: bootstrap-platform.yml  build-push-ai-assistant.yml  build-push-deploy-data-api-sampler.yml  build-push-deploy-data-api.yml  build-push-deploy-registration.yml  build-push-nats-auth-callout.yml  deploy-external-dns.yml  deploy-keycloak.yml  deploy-mcp-servers.yml  deploy-nats-auth-callout.yml  deploy-nats-bigtable-connector.yml  deploy-nats.yml  deploy-sample-services.yml  terraform-test.yml  test-base-services.yml  trivy-license-scan.yml  trivy-vulnerability.yml
base-services/auth-callout/: Dockerfile  go.mod  go.sum  main_test.go
base-services/data-api/: Dockerfile  go.mod  go.sum
base-services/data-api/src/: main.go
base-services/registration/server/: Cargo.toml  Dockerfile
base-services/registration/server/src/: certificates.rs  csr.rs  listener.rs  main.rs
docs/: changelog.md  code-of-conduct.md
iac/bootstrapping/: bootstrap-platform.sh  bucket-lifecycle-rules.json  teardown-platform.sh
iac/cloudbuild/: build-push-deploy-data-api-sampler.yaml  build-push-deploy-data-api.yaml  build-push-deploy-registration.yaml  build-push-nats-auth-callout.yaml  deploy-all.yaml  deploy-external-dns.yaml  deploy-keycloak.yaml  deploy-nats-auth-callout.yaml  deploy-nats-bigtable-connector.yaml  deploy-nats.yaml
iac/terraform/: bigtable.tf  cloudbuild.tf  data.tf  gke.tf  iam.tf  network.tf  pki.tf  registry.tf  sql.tf  variables.tf  workload-federation.tf
sample-clients/: generate-factory-cert-gcp.sh
sample-clients/python/: Makefile  README.md  main.py  pyproject.toml  run-python-client.sh
sample-clients/python/apps/simple_sim/: rerun_sim.py  simple_telemetry_sim.py
sample-clients/python/apps/vhal/: example_data.json  main.py
sample-clients/python/apps/vss/: config.py  simulator.py  vapp_nexus.py  vss_bridge_sim.py
sample-clients/python/nexus_sdk/: car.py  telemetry.py
sample-clients/vehicle-client/: Makefile  README.md  main.go  run-vehicle-client.sh
sample-services/data-api-sampler/: Dockerfile  pom.xml
(+41 files in other folders)
