[project]
name = "nexus-python-client"
version = "0.2.0"
description = "Simple SDK with some telemetry examples"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.2",
    "grpcio-tools>=1.71.0",
    "fastapi>=0.129.0",
    "kuksa-client>=0.4.3",
    "nats-py>=2.11.0",
    "protobuf>=6.33.5",
    "python-keycloak>=5.8.1",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
    "uvicorn>=0.41.0",
]

[tool.uv]
package = true

[project.scripts]

simple-sim = "apps.simple_sim.rerun_sim:main"

# The compact "All-in-One" VSS Bridge and Simulator
vss-bridge-sim = "apps.vss.vss_bridge_sim:main"

# The standalone Nexus VApp (without internal simulation)
vss-vapp = "apps.vss.vapp_nexus:main"
# The standalone Simulator needed vor vss vapp
vss-sim = "apps.vss.simulator:main"

vhal-sim = "apps.vhal.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexus_sdk", "apps"]
