[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["tokio", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
x509-parser = "0.15"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
hyper = { version = "1.0", features = ["full"] }
rustls-pki-types = "1.12.0"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
anyhow = "1.0.98"
time = "0.3.47"
serde = { version = "1.0.228", features = ["derive"] }
# Certificate hot-reloading
notify = { version = "7.0", default-features = false, features = ["macos_kqueue"] }
arc-swap = "1.7"
tower = { version = "0.5.3", features = ["util"] }

[dev-dependencies]
tempfile = "3.24.0"
